Fix some alignment issues

--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -6,6 +6,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 5vh;
     user-select: none;
     cursor: pointer;
